--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,6 @@ ep_kernels_workspace/
 
 # Allow tracked library source folders under submodules (e.g., benchmarks/lib)
 !vllm/benchmarks/lib/
+
+csrc/*
+vllm/third_party/triton_kernels/*
